mobile fixes, copy updates

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h2 class="section_title">Recent Work</h2>
           <div class="row-flex">
             <div class="col-flex-2">
-                <a href="voiceops">
+                <a href="voiceops-app">
                     <div class="work-container w0"></div>
                 </a>
             </div>
@@ -112,7 +112,7 @@
           <img src="img/aboutme.jpg" class="about_img" alt="graham"/>
         </div>
         <div class="col-flex-2">
-          <p>At an early age, I discovered my love of creating and building. Seeing the world as an object of design, I aim to better it through a user-centered process. I love to work closely with product teams in order to drive UI requirements from concept to release. I thrive on great communication, compassion, and drive amongst teams. In my free time, I run a Facebook and Instagram page for <a class="link" href="https://www.facebook.com/uxmemes" target="_blank">UX Design Memes</a> and tech humor, cook, enjoy the outdoors, and make <a class="link" href="https://soundcloud.com/graham-grimaldi" target="_blank">music</a>.</p>
+          <p>At an early age, I discovered my love of creating and building. Seeing the world as an object of design, I aim to better it through a user-centered process. I love to work closely with product teams and drive projects from concept to release. I thrive on great communication, compassion, and drive amongst teams. In my free time, I run a Facebook and Instagram page for <a class="link" href="https://www.facebook.com/uxmemes" target="_blank">UX Design Memes</a> and tech humor, cook, bike, skate, and make <a class="link" href="https://soundcloud.com/graham-grimaldi" target="_blank">music</a>.</p>
         </div>
       </div>
     </div>
