--- a/voiceops-app/index.html
+++ b/voiceops-app/index.html
@@ -50,30 +50,24 @@
   <div class="wrapper work">
     <div class="container">
       <h2>My solo product designer adventure</h2>
-      <p>Being the only designer in a very small startup and working on their flagship product came with many freedoms, challenges, and responsibilities throughout the many sprints I was involved with. Some weeks I would wear many hats, starting with lean research all the way through to visual design and style implementation in React.js with SASS. Other weeks, the problems we were solving only called for a specific part of the design process, like doing visual tweaks, gaining insight by watching FullStory recorded sessions, or low-fi ideation on potential solutions. I took a very lean, fail fast approach in creating new features and improvements for VoiceOps, as many of our ideas were exploratory and needed quick validation before we decided to go all-in on a particular solution.</p>
+      <p>Being the only designer in a very small startup came with many freedoms, challenges, and responsibilities throughout the many sprints I was involved with. Some weeks I would wear different hats, starting with lean research all the way through to visual design and style implementation in React.js with SASS. Other weeks, the problems we were solving only called for a specific part of the design process, like doing visual tweaks, gaining insight by watching FullStory recorded sessions, or low-fi ideation on potential solutions. I took a very lean, fail fast approach in creating new features and improvements for VoiceOps, as many of our ideas were exploratory and needed quick validation before we decided to go all-in on a particular solution.</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
       <img class="drop-style" src="../img/voiceopsapp-login.jpg" alt="voiceops steps"/>
-      <p class="img-caption">Sign in screen</p>
+      <p class="img-caption">Passworld-less sign in screen</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Smooth sign in experience</h2>
-      <p>Many of our users were going into the app for a specific reason and a short amount of time (like replying to a comment, or checking a quick stat) and didn't really need/want an account, we opted to build a password-less sign in experience. This new default would only require the user to type their email, and be able to sign in from a link rather than set up an account.</p>
+      <h2>Empowering our user to focus on good sales behavior</h2>
+      <p>At it's core, the VoiceOps app provides actionable insight to sales managers, allowing them to coach their reps better. When I was brought onboard, the app was already doing a great job of providing great data about sales calls that managers want to see. However, there wasn't any particular focus on one of the many valuable pieces of information about calls that really drove improvement in coaching and sales behaviors. We decided that the app should emphasize whether certain behaviors are happening or not on calls, and it should be very easy to find and coach on calls with relevant behaviors. I identified the primary use case for this as: choose rep > choose behavior > see calls > prepare for coaching. This aligned with our user's mental model of how they approached coaching a rep. Shifting our apps focus to behaviors significantly helped managers hone in on what they want to coach on and go through clear task flows in the app.</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
       <img class="drop-style" src="../img/voiceopsapp-callsdefault.jpg" alt="voiceops steps"/>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <h2>Setting the app's focus to encourage good sales behavior</h2>
-      <p>At it's core, VoiceOps' app provides actionable insight to sales managers, allowing them to coach their reps better. When I was brought onboard, the app was already doing a great job of providing data about sales calls that managers want to see. However, there wasn't any particular focus on one of the many valuable pieces of information about calls that really drove improvement in coaching and sales behaviors. We decided that the app should emphasize whether certain behaviors are happening or not on calls. I identified the primary use case for this as: choose rep > choose behavior > see calls. This aligned with our user's mental model of how they approached coaching a rep. Shifting our apps focus to behaviors significantly helped managers hone in on what they want to coach on and go through clear task flows in the app.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -91,6 +85,12 @@
   <div class="wrapper work">
     <div class="container">
       <img class="drop-style" src="../img/voiceopsapp-coaching.jpg" alt="voiceops steps"/>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/voiceopsapp-dragdrop.jpg" alt="voiceops steps"/>
+      <p class="img-caption">Drag and drop functionality for coaching form</p>
     </div>
   </div>
 
