updated voiceops.com case study and minor mobile fixes

--- a/voiceops/index.html
+++ b/voiceops/index.html
@@ -53,19 +53,19 @@
   <div class="wrapper work">
     <div class="container">
       <h2>Project planning and strategy</h2>
-      <p>I was given the responsibility of both design and development for the voiceops.com redesign. Being the only designer in the company, I had to plan and conduct the whole process in a timely/efficient manner, carefully delegating tasks and spending time wisely. I began by researching best implementation practices for the devices we we're targeting, as well as identifying pain points in the current design and how we could increase email signups.</p>
+      <p>I was given the responsibility of both design and development for the voiceops.com redesign. Being the only designer in the company, I had to plan and conduct the whole process in a timely/efficient manner, carefully delegating tasks and spending time wisely. I began by researching best implementation practices for the devices we we're targeting, as well as identifying pain points in the current design and how we could increase demo requests.</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
       <img class="drop-style" src="../img/voiceopssite-comparison.png" alt="voiceops steps"/>
-      <p class="img-caption">New Voiceops.com(left) vs. old(right)</p>
+      <p class="img-caption">Old Voiceops.com(left) vs. new VoiceOps(right)</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
       <h2>Communicating value</h2>
-      <p>The weakest aspect of the previous design was it's value proposition and content. The site's hero section was vague, unfriendly, and had a weak call-to-action. The content was chunked into many different sections that all gave confusing details on what the product does and it's value, like 'Remove the guesswork, and elevate your team'. I worked directly with the founders and marketing people in the company to establish what the real value was and how we could communicate it in the simplest manner. We arrived at the new hero section(above) and 3 short paragraphs with titles and simplified product screenshots(below), after many different copy iterations.</p>
+      <p>The weakest aspect of the previous design was it's value proposition and content. The site's hero section was vague, unfriendly, and had a weak call-to-action. The content was chunked into many different sections that all gave confusing details on what the product does and it's value, like 'Remove the guesswork, and elevate your team'. I worked directly with the founders and marketing department in  to establish what the real value was and how we could communicate it in the simplest manner. We arrived at the new hero section(above) and 3 short paragraphs with titles and simplified product screenshots(below), after many different copy iterations.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -86,7 +86,7 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/voiceopssite-testimonials.jpg" alt="voiceops steps"/>
+      <img class="drop-style" src="../img/voiceopssite-testimonials.png" alt="voiceops steps"/>
       <p class="img-caption">Testimonial section and footer</p>
     </div>
   </div>
