--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <h2 class="section_title">Hire Me!</h2>
       <div class="row-flex">
         <div class="col-flex-2">
-            <p>I love to work with great teams and build world-class digital products. If you'd like to get in touch, send me an email at <a class="link" href="mailto:oldskoolduck@gmail.com">oldskoolduck@gmail.com</a></p>
+            <p>I love to work with great teams and build world-class digital products. If you'd like to get in touch, send me an email at <a class="link" href="mailto:oldskoolduck@gmail.com">grahamgrimaldi91@gmail.com</a></p>
         </div>
         <div class="col-flex-2">
             <a class="button" href="../img/grahamgrimaldi-resume.pdf" download><i class="material-icons">cloud_download</i> Get My Resume</a>
