--- a/interactive_venue_maps/index.html
+++ b/interactive_venue_maps/index.html
@@ -50,7 +50,7 @@
   <div class="wrapper work">
     <div class="container">
       <h2>Discovering our customer needs</h2>
-      <p>I conducted a competitive analysis and feature comparison between some of the top ticketing sites and apps, as well as stakeholder interviews to gain insight into what the current behavior and pain points were. This would inform me of the most important features, functionality, and information our customers needed.</p>
+      <p> In the discovery phase of the project, I conducted a competitive analysis and feature comparison between some of the top ticketing sites and apps, as well as stakeholder and call center representative interviews to gain insight into what the current behavior and pain points were. Through speaking with call center representatives, I made a realization that many customers did not have enough information when selecting seats and buying tickets. It was a common case that a customer would call in and ask to confirm what they purchased or ask questions about their seats. This would inform me of the most important features, functionality, and information our customers needed.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -61,7 +61,7 @@
   <div class="wrapper work">
     <div class="container">
       <h2>Brainstorming and early wireframes</h2>
-      <p>Communication is key. I created several rough wireframes, flow charts, and clickable prototypes to share ideas with team members and stakeholders early in our timeline. I was able to rapidly iterate on my ideas by testing these prototypes with potential users and getting feedback from business and development members.</p>
+      <p>In order to put my ideas down and get some early testing, I created several rough wireframes, flow charts, and clickable prototypes to share ideas with team members and stakeholders early in our timeline. I was able to rapidly iterate on my ideas by testing these prototypes with potential users and getting feedback from business and development members.</p>
     </div>
   </div>
   <div class="wrapper work">
