--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                 </a>
             </div>
             <div class="col-flex-2">
+                <p class="work-container_title">Activity Tracking Component</p>
+                <p class="work-container_description">Creating a reusable activity tracking feature for a student information system</p>
+                <a href="voiceops-app/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+            </div>
+        </div>
+          <div class="row-flex">
+            <div class="col-flex-2">
+                <a href="voiceops-app">
+                    <div class="work-container w0"></div>
+                </a>
+            </div>
+            <div class="col-flex-2">
                 <p class="work-container_title">VoiceOps App</p>
                 <p class="work-container_description">Flagship product for voice data analytics startup</p>
                 <a href="voiceops-app/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
