--- a/activitytracking/index.html
+++ b/activitytracking/index.html
@@ -50,36 +50,36 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Making sense of a monsterous product</h2>
-      <p>TicketNetwork brokers had been using a very outdated, yet powerful software to  meet their needs for 10+ years. The product grew rapidly, eventually becoming bloated, slow, and unstable before the decision was made to rebuild it into a web-based product that would be lean, fast, and accessible. My first, and most important goal was to immerse myself in a typical broker's workflow. It was critical that I understood how the current point-of-sale was being used, and the primary pain-points associated with those workflows.</p>
+      <h2>Collecting insight and business requirements</h2>
+      <p>An important feature in the Rediker AdminPlus legacy application was the ability for school administrators to see a history of changes on stored field data. I gained insight into the needs of this feature by meeting with stakeholders and writing notes on what was currently known about this feature. Activity tracking did exist in the legacy app, but it was very convoluted and hidden under many unnecessary layers. Working with stakeholders and the Project Manager, I wrote a list of business requirements that were refined over time as we reviewed it with others and learned more about the needs of this feature. One example of an added requirement was the ability to filter the results of line item changes, as the feature would often contain hundreds of results that needed to be looked through. Here was one state of the business requirements and notes I wrote initially: </p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/pos-nav.jpg" alt="navigation"/>
+      <img class="drop-style" src="../img/activity-requirements.png" alt="activitytracking"/>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Laying the groundwork and rapid iteration</h2>
-      <p>Early conceptualization of the web-based point-of-sale was a balancing act between prioritizing features, and creating a solid groundwork that would support the massive amount of features/functionality that would be added in later sprints. During this time, I created many low to mid fidelity wireframes and concepts to help the team visualize the product and plan development accordingly.</p>
+      <h2>Initial concepts, inspiration, and wireframes</h2>
+      <p>As a starting point, I wanted to look at other competing products that had this feature, and other existing change history components in general. I found many applications that had just one page of "History" that contained every change made within the product. Being that our product contained many different areas it would be implemented, and many different types of content (everything from birth dates to long paragraphs of notes), I made the decision early on to contain the activity tracking component within the page or tab it was relevant to. This would prevent users having to search through large lists of results, and provides a more focused experience. Here are some wireframes I created in Axure to conceptualize my ideas: </p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/pos-wireframe.jpg" alt="wireframe"/>
+      <img class="drop-style" src="../img/activity-single.png" alt="wireframe"/>
       <p class="img-caption">Early main grid concept</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/pos-concept1.png" alt="visual concept"/>
+      <img class="drop-style" src="../img/activity-fullpage.png" alt="visual concept"/>
       <p class="img-caption">Early dashboard visual concept</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/pos-concept2.png" alt="visual concept"/>
+      <img class="drop-style" src="../img/activity-context.png" alt="visual concept"/>
     </div>
   </div>
   <div class="wrapper work">
