--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h2 class="section_title">Recent Work</h2>
           <div class="row-flex">
             <div class="col-flex-2">
-                <a href="voiceops-app">
+                <a href="activitytracking/">
                     <div class="work-container w5"></div>
                 </a>
             </div>
