--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-flex-2">
                 <p class="work-container_title">Activity Tracking Component</p>
                 <p class="work-container_description">Creating a reusable activity tracking feature for a student information system</p>
-                <a href="voiceops-app/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+                <a href="activitytracking/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
             </div>
         </div>
           <div class="row-flex">
