--- a/activitytracking/index.html
+++ b/activitytracking/index.html
@@ -40,10 +40,10 @@
           <p>Create an activity tracking component that can be reused throughout the app for seeing change history</p>
           <br/>
           <p class="text-bold">My Role:</p>
-          <p>User research, moderated usability testing, wireframing, prototyping, visual interface design</p>
+          <p>Requirements writing, research, wireframes</p>
         </div>
         <div class="col-flex-2">
-          <img class="drop-style" src="../img/pos-events.jpg"/>
+          <img class="drop-style" src="../img/activity-context.png"/>
         </div>
       </div>
     </div>
@@ -68,91 +68,41 @@
   <div class="wrapper work">
     <div class="container">
       <img class="drop-style" src="../img/activity-single.png" alt="wireframe"/>
-      <p class="img-caption">Early main grid concept</p>
+      <p class="img-caption">Annotated wireframe concept</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
       <img class="drop-style" src="../img/activity-fullpage.png" alt="visual concept"/>
-      <p class="img-caption">Early dashboard visual concept</p>
+      <p class="img-caption">Expanded view + more results</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
       <img class="drop-style" src="../img/activity-context.png" alt="visual concept"/>
+      <p class="img-caption">Example in context of the Tuition Management page</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Optimizing complicated workflows</h2>
+      <h2>Moving forward with priorities</h2>
 
-      <p>Designing a new product for veteran brokers was a daunting proccess, being that most of them were very stuck in their habits of how the old point-of-sale worked, and did not seem very open to change. A lot of areas in the old point-of-sale contained duplicate functionality, unnecessary steps, and hidden features that brokers had become accustomed to. It was critical that we optimize workflows for speed and usability in order to provide a smooth and rewarding of transition to the new product.</p>
+      <p>As many projects do, this one unfortunately got frozen for the time being. Shifting priorities pushed this feature back to our Beta release, rather than MVP, so I put the brakes on it right before I began to build a prototype. My plan was to make my wireframes lightly interactive so that I could share with our users and get some insight before moving onto visual design. I made sure to document what I had learned so far during my design sprints, so that I could pick it back up easily at a later time.</p>
     </div>
   </div>
-  <div class="wrapper work">
-    <div class="container">
-      <img class="drop-style" src="../img/pos-addtix-flow.jpg" alt="userflow"/>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <h2>Visual ecosystem</h2>
-
-      <p>Laying down a very strong design ecosystem was critical to the ease of implementation and communication. I carefully built a system of reusable UI elements and styles to enable a smooth design-to-dev handoff process. Just about every UI element imagineable was somewhere to be found in the web point-of-sale's 100+ unique screen designs, so it was very important for me to keep a consistent and clearly defined library of these elements.</p>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-        <img class="drop-style" src="../img/pos-btns.jpg" alt="buttonstyles"/>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-        <img class="drop-style" src="../img/pos-alerts.jpg" alt="alertstyles"/>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <h2>Visual design</h2>
-      <p>Familiar, yet modern was my primary initiative on the visual UI design side of things. The old point-of-sale used 100% native Windows application UI from 10 years ago. It was my job to bring Spotlight into the world of modern web design, but at the same time not stray too far from the classic, tried-and-true UI elements most brokers were used to.</p>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <img class="drop-style" src="../img/pos-dashboard.jpg" alt="dashboard"/>
-      <p class="img-caption">Dashboard visual design</p>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <img class="drop-style" src="../img/pos-events.jpg" alt="events"/>
-      <p class="img-caption">Events main page</p>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <img class="drop-style" src="../img/pos-addtix-filled.jpg" alt="addtickets"/>
-      <p class="img-caption">Adding inventory to events</p>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <img class="drop-style" src="../img/pos-inventory.jpg" alt="inventory"/>
-      <p class="img-caption">Inventory management screen</p>
-    </div>
-  </div>
+  
 
   <!--Previous/Next-->
   <div class="wrapper work">
     <div class="container">
       <div class="button next">
-        <a href="../tn-portal">
-          <p>Next: TicketNetwork Portal<i class="material-icons">keyboard_arrow_right</i></p>
+        <a href="../voiceops-app/">
+          <p>Next: VoiceOps App<i class="material-icons">keyboard_arrow_right</i></p>
         </a>
       </div>
       <div class="button-secondary previous">
-        <a href="../interactive_venue_maps">
-          <p><i class="material-icons">keyboard_arrow_left</i>Previous: Venue Maps</p>
+        <a href="../">
+          <p>Back to Home</p>
         </a>
       </div>
     </div>
