--- a/voiceops-app/index.html
+++ b/voiceops-app/index.html
@@ -104,8 +104,8 @@
         </a>
       </div>
       <div class="button-secondary previous">
-        <a href="../">
-          <p>Back to Home</p>
+        <a href="../activitytracking/">
+          <p>Previous: Activity Tracking<i class="material-icons">keyboard_arrow_right</i></p>
         </a>
       </div>
     </div>
