--- a/attendance/index.html
+++ b/attendance/index.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon"/>
 <link href="https://fonts.googleapis.com/css?family=Material+Icons|Nunito:400,900" rel="stylesheet">
 <link href="../css/styles.css" rel="stylesheet" type="text/css">
-<meta name="description" content="Graham Grimaldi is digital designer and developer in Connecticut who specializes in UI/UX design and front-end development">
+<meta name="description" content="Graham Grimaldi is a digital designer and developer in Connecticut who specializes in UI/UX design and front-end development">
 <meta name="keywords" content="Graham Grimaldi">
 <meta name="author" content="Graham Grimaldi">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -34,16 +34,16 @@
     <div class="container project_header">
       <div class="row-flex">
         <div class="col-flex-2">
-          <h1 class="project_title">Activity Tracking Component</h1>
+          <h1 class="project_title">Student Attendance</h1>
 
           <p class="text-bold">Goals:</p>
-          <p>Create an activity tracking component that can be reused throughout the app for seeing change history</p>
+          <p>Conduct usability testing and design a new feature for daily attendance taking</p>
           <br/>
           <p class="text-bold">My Role:</p>
-          <p>Requirements writing, research, wireframes</p>
+          <p>Usability testing moderator, user research, wireframing, visual design</p>
         </div>
         <div class="col-flex-2">
-          <img class="drop-style" src="../img/activity-context.png"/>
+          <img class="drop-style" src="../img/attendance-dayview.jpg"/>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/activity-requirements.png" alt="activitytracking"/>
+      <img class="drop-style" src="../img/attendance-flow.png" alt="activitytracking"/>
     </div>
   </div>
   <div class="wrapper work">
@@ -67,20 +67,8 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/activity-single.png" alt="wireframe"/>
-      <p class="img-caption">Annotated wireframe concept</p>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <img class="drop-style" src="../img/activity-fullpage.png" alt="visual concept"/>
-      <p class="img-caption">Expanded view + more results</p>
-    </div>
-  </div>
-  <div class="wrapper work">
-    <div class="container">
-      <img class="drop-style" src="../img/activity-context.png" alt="visual concept"/>
-      <p class="img-caption">Example in context of the Tuition Management page</p>
+      <img class="drop-style" src="../img/attendance-wireframe.jpg" alt="visual concept"/>
+      <p class="img-caption">Clickable Axure prototype for user testing</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -89,6 +77,13 @@
 
       <p>As projects sometimes do, this one unfortunately got frozen for the time being. Shifting priorities pushed this feature back to our Beta release, rather than MVP, so I put the brakes on it right before I began to build a prototype. My plan was to make my wireframes lightly interactive so that I could share with our users and get some insight before moving onto visual design. I made sure to document what I had learned so far during my design sprints, so that I could pick it back up easily at a later time. The knowledge I gained from this project certainly translated to others I was working on in tandem, so in the end it had a positive ripple affect, and we would revisit activity tracking in later sprints.</p>
     </div>
+    <div class="wrapper work">
+      <div class="container">
+        <img class="drop-style" src="../img/attendance-chart.png" alt="visual concept"/>
+        <p class="img-caption">Results of our usability study</p>
+      </div>
+    </div>
+    <div class="wrapper work">
   </div>
   
 
@@ -96,13 +91,13 @@
   <div class="wrapper work">
     <div class="container">
       <div class="button next">
-        <a href="../voiceops-app/">
-          <p>Next: VoiceOps App<i class="material-icons">keyboard_arrow_right</i></p>
+        <a href="../activitytracking/">
+          <p>Next: Activity Tracking<i class="material-icons">keyboard_arrow_right</i></p>
         </a>
       </div>
       <div class="button-secondary previous">
-        <a href="../attendance/">
-          <p>Previous: Student Attendance</p>
+        <a href="../">
+          <p>Back to Home</p>
         </a>
       </div>
     </div>
