--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header id="uno" class="wrapper intro">
         <div class="container">
           <h1> Hi, I'm Graham Grimaldi, a
-            <span class="text-highlight">product designer</span> with a passion for crafting experiences.
+            <span class="text-highlight">user experience designer</span> with a passion for crafting experiences.
           </h1>
         </div>
     </header>
@@ -41,6 +41,18 @@
     <section id="work" class="wrapper work">
         <div class="container">
           <h2 class="section_title">Recent Work</h2>
+          <div class="row-flex">
+            <div class="col-flex-2">
+                <a href="attendance/">
+                    <div class="work-container w6"></div>
+                </a>
+            </div>
+            <div class="col-flex-2">
+                <p class="work-container_title">Student Attendance</p>
+                <p class="work-container_description">Conducting usability testing and creating an attendance taking feature</p>
+                <a href="attendance/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+            </div>
+        </div>
           <div class="row-flex">
             <div class="col-flex-2">
                 <a href="activitytracking/">
@@ -157,7 +169,7 @@
       <h2 class="section_title">Hire Me!</h2>
       <div class="row-flex">
         <div class="col-flex-2">
-            <p>I love to work with great teams and build world-class digital products. If you'd like to get in touch, send me an email at <a class="link" href="mailto:oldskoolduck@gmail.com">grahamgrimaldi91@gmail.com</a></p>
+            <p>If you'd like to get in touch, send me an email at <a class="link" href="mailto:grahamgrimaldi91@gmail.com">grahamgrimaldi91@gmail.com</a></p>
         </div>
         <div class="col-flex-2">
             <a class="button" href="../img/grahamgrimaldi-resume.pdf" download><i class="material-icons">cloud_download</i> Get My Resume</a>
