--- a/point-of-sale/index.html
+++ b/point-of-sale/index.html
@@ -146,8 +146,8 @@
   <div class="wrapper work">
     <div class="container">
       <div class="button next">
-        <a href="../tn-portal">
-          <p>Next: TicketNetwork Portal<i class="material-icons">keyboard_arrow_right</i></p>
+        <a href="../">
+          <p>Back to Home</p>
         </a>
       </div>
       <div class="button-secondary previous">
