--- a/attendance/index.html
+++ b/attendance/index.html
@@ -50,8 +50,8 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Collecting insight and business requirements</h2>
-      <p>During the Rediker Software's initiative to replace the legacy desktop application with a web version, I was given a project to create an improved activity tracking feature. An important function in the Rediker AdminPlus legacy application was the ability for School Administrators to see a history of changes on stored field data for legal or referential purposes. I gained insight into the needs of this feature by meeting with stakeholders and writing notes on what was currently known about the functionality that exists in the legacy app. Turns out, the "History" feature was very convoluted and hidden under many unnecessary layers and needed improvement for the web. Working with stakeholders and the Project Manager, I wrote a list of business requirements that were refined over time as we reviewed it with others and learned more about the needs of this feature. One example of an added requirement was the ability to filter the results of line item changes, as the feature would often contain hundreds of results that needed to be looked through. Here was one state of the business requirements and notes I wrote initially: </p>
+      <h2>Evaluating current processes and problem discovery</h2>
+      <p>During my time at Rediker software, I got to work on one of the largest and most high priority features in their flagship app, the attendance taking feature. This was a long process of discovery, testing, iterating, and collaboration amongst my team that resulted in a positive change in the new application. After initially kicking off the project, I interviewed several stakeholders that had familiarity with the legacy version of attendance taking. I created some flow charts and wrote a lot of notes to help myself understand the process of attendance taking and the multiple personas and steps involved in the process. I saw how important accuracy and communication was in this process, as attendance can have a massive impact on grading and student promotion.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -61,8 +61,8 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Initial concepts, inspiration, and wireframes</h2>
-      <p>As a starting point, I wanted to look at competing products that had this feature, and other existing change history components in general. I found some applications that had just one page of "History" that contained every change made within the product. Being that our product contained many different areas it would be implemented, and many different types of content (everything from birth dates to long paragraphs of notes), I made the decision early on to contain the activity tracking component within the page or tab it was relevant to. This would prevent users having to search through large lists of results, and provides a more focused experience. My biggest goal was to create a component that would anticipate different types of data and displays that could be quickly filtered and legible. Here are some wireframes I created in Axure to conceptualize my ideas: </p>
+      <h2>Wireframes and prototype</h2>
+      <p>Since attendance was such a well known and documented process in schools, I had a huge amount of insight at my disposal from stakeholders and other coworkers that had dealt with the process. My next step was to take this knowledge and try to draft up a wireframe and prototype, so that I could get to testing my ideas as soon as possible. I went through several wireframe interations with my team before moving onto prototyping in Axure, in preparation for a moderated usability test we were planning. The process began with a teacher marking the attendance in the classroom, which would then get communicated to the office, where the administrators would take action on any status other that "Present". I wanted to use color and as much bite-size info as possible to mark each student's attendance status, as I felt the most important visual signifier was to differentiate the statuses, so the office attendance taker could quickly glance at the list and find the "Absent" and "Tardy" statuses.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -73,7 +73,7 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Moving forward with priorities</h2>
+      <h2>Usability testing</h2>
 
       <p>As projects sometimes do, this one unfortunately got frozen for the time being. Shifting priorities pushed this feature back to our Beta release, rather than MVP, so I put the brakes on it right before I began to build a prototype. My plan was to make my wireframes lightly interactive so that I could share with our users and get some insight before moving onto visual design. I made sure to document what I had learned so far during my design sprints, so that I could pick it back up easily at a later time. The knowledge I gained from this project certainly translated to others I was working on in tandem, so in the end it had a positive ripple affect, and we would revisit activity tracking in later sprints.</p>
     </div>
